<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidClass</string>
    <string name="action_settings">Settings</string>
    <string name="edit_text_hint">Enter a message</string>
    <string name="button_submit">Submit</string>
    <string name="button_info">Get Info</string>
    <string name="button_clicker">Press 25 times for a SURPRISE!!</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="info_name">Sayer Bartlett</string>
    <string name="info_class">CS 310 Winter 2015</string>
    <string name="info_assignment">Assignment 3</string>
    <string name="action_search">Search</string>
    <string name="action_like">Punch It!</string>
    <string name="title_activity_rick_astley">RickAstleyActivity</string>
    <string name="RickAstley">rickastley</string>
    <string name="rick_rolled">You just got Rick Rolled BITCH!</string>
    <string name="total_clicks">clicks</string>
    <string name="punch_it_message">One does not simply MAKE an app…</string>
    <string name="clicks_first_level">Did you think it would be that Easy?? Click 10 more times for the SURPRISE!!</string>
    <string name="clicks_second_level">SURPRISE!!! Just kidding… Click 7 more times!</string>
    <string name="clicks_third_level">Okay I promise! Just 100 more and the SURPRISE is yours!!</string>

</resources>
