<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.sayerbartlett.androidclass_restructured.UI.InfoActivity"
                android:background="@android:color/holo_blue_light">

    <TextView
        android:text="@string/info_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView_class"
        android:textSize="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_name"
        android:id="@+id/textView_name"
        android:layout_above="@+id/textView_class"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_assignment"
        android:id="@+id/textView_Assignment"
        android:layout_below="@+id/textView_class"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_Info_punchIt"
        android:layout_below="@+id/textView_Assignment"
        android:layout_centerHorizontal="true"
        android:textSize="32dp"
        android:textColor="#ffffff"/>

</RelativeLayout>
